--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -2,6 +2,8 @@
 @use 'html';
 @use 'body';
 @use 'img';
+@use 'definition';
+@use 'icons';
 // @import 'img';
 // @import 'table';
 // @import 'hr';
