--- a/src/scss/00-vars/_colors-shemes.scss
+++ b/src/scss/00-vars/_colors-shemes.scss
@@ -90,53 +90,83 @@
 .tertiary {
 	background-color: var(--tertiary);
 	@include color-contrast.text-contrast(var(--tertiary));
-
 }
 
 .quaternary {
 	background-color: var(--quaternary);
 	@include color-contrast.text-contrast(var(--quaternary));
-
 }
 
 .surface1 {
 	background-color: var(--surface1);
 	@include color-contrast.text-contrast(var(--surface1));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface1));
+	}
 }
 
 .surface2 {
 	background-color: var(--surface2);
 	@include color-contrast.text-contrast(var(--surface2));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface2));
+	}
 }
 
 .surface3 {
 	background-color: var(--surface3);
 	@include color-contrast.text-contrast(var(--surface3));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface3));
+	}
 }
 
 .surface4 {
 	background-color: var(--surface4);
 	@include color-contrast.text-contrast(var(--surface4));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface4));
+	}
 }
 
 .surface5 {
 	background-color: var(--surface5);
 	@include color-contrast.text-contrast(var(--surface5));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface5));
+	}
 }
 
 .surface6 {
 	background-color: var(--surface6);
 	@include color-contrast.text-contrast(var(--surface6));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface6));
+	}
 }
 
 .surface7 {
 	background-color: var(--surface7);
 	@include color-contrast.text-contrast(var(--surface7));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface7));
+	}
 }
 
 .surface8 {
 	background-color: var(--surface8);
 	@include color-contrast.text-contrast(var(--surface8));
+
+	& blockquote {
+		@include color-contrast.border-contrast(var(--surface8));
+	}
 }
 
 .brand-inverted-highlight1 {
@@ -158,6 +188,22 @@
 
 .text2 {
 	color: var(--text2);
+}
+
+.text-primary {
+	color: var(--primary);
+}
+
+.text-secondary {
+	color: var(--secondary);
+}
+
+.text-tertiary {
+	color: var(--tertiary);
+}
+
+.text-quaternary {
+	color: var(--quaternary);
 }
 
 .swatch {
