feat update components

--- a/src/scss/1-helpers/0-mixins/_color-contrast.scss
+++ b/src/scss/1-helpers/0-mixins/_color-contrast.scss
@@ -15,3 +15,12 @@
 		var(--text4)
 	);
 }
+
+@mixin background-as-text-contrast($n) {
+	background-color: color-contrast(
+		$n vs var(--text1),
+		var(--text2),
+		var(--text3),
+		var(--text4)
+	);
+}
