feat: create extended button componente

--- a/src/scss/2-base/_button.scss
+++ b/src/scss/2-base/_button.scss
@@ -1,6 +1,143 @@
-button,
 .button {
-    // background-color: red;
-    padding: .7rem .5rem;
-    margin: .7rem .5rem;
+	pointer-events: auto;
+	cursor: pointer;
+	background-color: var(--surface8);
+	border: none;
+	margin: 0;
+	position: relative;
+	display: inline-block;
+
+    &::before,
+    &::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    &:focus {
+        color: var(--text1);
+        background-color: var(--text1);
+        mix-blend-mode: difference;
+    }
+}
+
+.button--default {
+    padding: 1.5rem 3rem;
+}
+.button--small {
+    padding: 1.0rem 2rem;
+}
+.button--large {
+    padding: 2.2rem 6rem;
+    font-size: large;
+}
+.button--fit {
+    padding: 1.0rem 2rem;
+    width:100%;
+}
+
+.button--primary {
+    overflow: hidden;
+    color: var(--text1);
+    font-weight: 500;
+    span {
+        display: block;
+        position: relative;
+    }
+
+    > span {
+        overflow: hidden;
+        mix-blend-mode: difference;
+    }
+
+
+
+    &:hover > span > span {
+        animation: MoveUpInitial 0.2s forwards, MoveUpEnd 0.2s forwards 0.2s;
+    }
+
+    &::before {
+        content: '';
+        background: var(--surface2);
+        width: 100%;
+        height: 100%;
+        transform-origin: 50% 100%;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        transition: clip-path 0.2s, -webkit-clip-path 0.2s;
+        transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
+    }
+
+    &:hover::before {
+        transition-duration: 0.3s;
+        -webkit-clip-path: polygon(0 0, 100% 0, 0 0, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 0 0, 0% 100%);
+    }
+}
+
+.button--secondary {
+	border: 2px solid var(--surface8);
+	overflow: hidden;
+	color: var(--text1);
+
+    span {
+        display: block;
+        position: relative;
+    }
+
+    > span {
+        overflow: hidden;
+    }
+
+    > span > span {
+        overflow: hidden;
+        mix-blend-mode: difference;
+    }
+
+    &:hover > span > span {
+        animation: MoveUpInitial 0.2s forwards, MoveUpEnd 0.2s forwards 0.2s;
+    }
+
+    &::before {
+        content: '';
+        background: var(--text1);
+        transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+        transform-origin: 100% 50%;
+    }
+
+    &:hover::before {
+        transform: scale3d(0,1,1);
+        transform-origin: 0% 50%;
+    }
+}
+
+
+@keyframes MoveUpInitial {
+	to {
+		transform: translate3d(0,-105%,0);
+	}
+}
+
+@keyframes MoveUpEnd {
+	from {
+		transform: translate3d(0,100%,0);
+	}
+	to {
+		transform: translate3d(0,0,0);
+	}
+}
+
+html[data-theme='miami'] {
+    .button {
+        background-color: var(--text4);
+    }
+
+    .button--primary {
+        color: var(--surface5);
+        &::before {
+            background: var(--surface2);
+        }
+    }
 }
