--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -15,6 +15,7 @@
 // // @import 'fonts';
 // // @import 'font';
 @use 'button';
+@use 'buttonCombo';
 // @import 'hidden';
 // @import 'href';
 // @import 'rte';
