feat: add storybook

--- a/src/scss/00-vars/_colors-shemes.scss
+++ b/src/scss/00-vars/_colors-shemes.scss
@@ -28,8 +28,8 @@
 }
 
 [data-theme='default'] {
-	color-scheme: light;
-	@include light-sheme.light-sheme;
+	color-scheme: miami;
+	@include miami-sheme.miami-sheme;
 }
 
 [data-theme='dark'] {
