feat refactor menu

--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -7,6 +7,7 @@
 // @import 'img';
 @use 'table';
 @use 'hr';
+@use 'last-column-flex-end';
 // @import 'spacing';
 // @import 'align';
 // @import 'sameHeight';
