--- a/src/routes/portfolio/index-portfolio.scss
+++ b/src/routes/portfolio/index-portfolio.scss
@@ -15,117 +15,331 @@
 	}
 }
 
+@keyframes glitchText {
+    0% {
+        opacity: 1;
+        transform: translate3d(-10px, 0, 0) scale3d(-1, -1, 1);
+        clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
+    }
+
+    10% {
+        clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
+    }
+
+    20% {
+        clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
+    }
+
+    35% {
+        clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
+    }
+
+    50% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
+    }
+
+    60% {
+        clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+    }
+
+    70% {
+        clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
+    }
+
+    80% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+    }
+
+    90% {
+        transform: translate3d(-10px, 0, 0) scale3d(-1, -1, 1);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+}
+
+@keyframes glitchLine {
+    0% {
+        transform: scale3d(1, 1, 1);
+    }
+
+    10% {
+        transform: translate3d(10px, 0, 0);
+    }
+
+    20% {
+        transform: translate3d(0, 4px, 0);
+    }
+
+    30% {
+        transform: scale3d(0.1, 1.4, 1) translate3d(0, -25px, 0);
+        transform-origin: 100% 0%;
+    }
+
+    40% {
+        transform: scale3d(1, 0.3, 1) translate3d(0, 25px, 0);
+    }
+
+    50% {
+        transform: scale3d(0.5, 0.3, 1) translate3d(-100px, -80px, 0);
+    }
+
+    60% {
+        transform: scale3d(1, 1.25, 1) translate3d(10px, -5px, 0);
+    }
+
+    70% {
+        transform: scale3d(0.5, 0.5, 1) translate3d(0, 20px, 0);
+    }
+
+    80% {
+        transform: translate3d(-30, 10px, 0) scale3d(1, 0.4, 1);
+        transform-origin: 100% 0%;
+    }
+
+    90% {
+        transform: scale3d(1, 0.5, 1) translate3d(0, -15px, 0);
+        transform-origin: 0% 80%;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .port_box {
 	padding-top: 2rem;
-}
 
-.port_box__layout {
-	background-color: var(--surface1);
-	border-top: 3px solid var(--text2);
-	margin-bottom: 2rem;
-	padding: 1rem;
-}
+	a:hover {
+		.port_box__title {
+			animation: glitchText 0.7s linear;
+			animation: glitchLine 0.7s steps(2, start) forwards;
+			background-color: var(--surface3);
+			color: var(--text2);
 
-.port_box__layout_intro {
-	height: 700px;
-}
+			img {
+				animation: glitchText 0.4s linear;
+				animation: glitchLine 0.5s steps(2, start) backwards;
 
-.port_box__layout_intro .port_box__intro_text {
-	font-size: 9rem;
-	font-weight: 700;
-	transform: translate(-20%, 810%) rotate(-80deg);
-}
+				@keyframes glitchText {
+					100% {
+						opacity: 1;
+						transform: translate3d(-10px, 0, 0) scale3d(-1, -1, 1);
+						clip-path: polygon(0 20%, 10% 20%, 100% 21%, 0 21%);
+					}
 
-.port_box__layout_001 {
-	min-height: 300px;
-}
+					90% {
+						clip-path: polygon(0 33%, 10% 33%, 100% 33%, 0 33%);
+					}
 
-.port_box__layout_002 {
-	min-height: 400px;
-}
+					80% {
+						clip-path: polygon(0 44%, 10% 44%, 100% 44%, 0 44%);
+					}
 
-.port_box__layout_003 {
-	min-height: 700px;
-}
+					75% {
+						clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
+					}
 
-.port_box__layout_004 {
-	min-height: 400px;
-}
+					50% {
+						clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
+					}
 
-.port_box__layout_005 {
-	min-height: 240px;
-}
+					40% {
+						clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+					}
 
-.port_box__layout_006 {
-	min-height: 140px;
-}
+					30% {
+						clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
+					}
 
-.port_box__layout_007 {
-	min-height: 380px;
-}
+					20% {
+						clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+					}
 
-.port_box__title {
-	font-size: 2rem;
-	font-weight: 700;
-}
+					10% {
+						transform: translate3d(-10px, 0, 0) scale3d(-1, -1, 1);
+					}
 
-.port_box__layout_003 .port_box__number {
-	font-size: 7rem;
-	font-weight: 700;
-	padding-bottom: 1rem;
-}
+					0% {
+						opacity: 1;
+						transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
 
-.port_box__layout_003 .port_box__number {
-	font-size: 7rem;
-	font-weight: 700;
-	padding-bottom: 1rem;
-}
+						clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+					}
+				}
 
-.port_box__description {
-	color: var(--text2);
-	font-size: 1.2rem;
-	font-weight: 700;
-	padding-bottom: 2rem;
-}
+				@keyframes glitchLine {
+					0% {
+						transform: scale3d(1, 1, 1);
+					}
 
-.port_box__layout_003 .port_box__image img {
-	width: 150%;
-}
+					10% {
+						transform: translate3d(10px, 0, 0);
+					}
 
-.port_box__layout_001 .port_box__number {
-    font-size: 4rem;
-    font-weight: 700;
-    padding-bottom: 2rem;
-}
+					20% {
+						transform: translate3d(0, 4px, 0);
+					}
 
-.port_box__layout_002 .port_box__number {
-    font-size: 5rem;
-    font-weight: 700;
-    padding-bottom: 2rem;
-}
+					30% {
+						transform: scale3d(0.1, 1.4, 1) translate3d(0, -25px, 0);
+						transform-origin: 100% 0%;
+					}
 
-.port_box__layout_003 .port_box__number {
-	font-size: 7rem;
-	font-weight: 700;
-	padding-bottom: 1rem;
-}
+					40% {
+						transform: scale3d(1, 0.3, 1) translate3d(0, 25px, 0);
+					}
 
-.port_box__layout_004 .port_box__number {
-    font-size: 4rem;
-    font-weight: 700;
-}
+					50% {
+						transform: scale3d(0.5, 0.3, 1) translate3d(-100px, -80px, 0);
+					}
 
-.port_box__layout_005 .port_box__number {
-    font-size: 2rem;
-    font-weight: 700;
-}
+					60% {
+						transform: scale3d(1, 1.25, 1) translate3d(10px, -5px, 0);
+					}
 
-.port_box__layout_006 .port_box__number {
-    font-size: 2rem;
-    font-weight: 700;
-}
+					70% {
+						transform: scale3d(0.5, 0.5, 1) translate3d(0, 20px, 0);
+					}
 
-.port_box__number {
-	font-size: 5rem;
-	font-weight: 700;
+					80% {
+						transform: translate3d(-30, 10px, 0) scale3d(1, 0.4, 1);
+						transform-origin: 100% 0%;
+					}
+
+					90% {
+						transform: scale3d(1, 0.5, 1) translate3d(0, -15px, 0);
+						transform-origin: 0% 80%;
+					}
+
+					100% {
+						opacity: 1;
+					}
+				}
+			}
+		}
+	}
+
+	&__layout {
+		padding: 1rem;
+		border-top: 3px solid var(--text2);
+		background-color: var(--surface1);
+		margin-bottom: 2rem;
+	}
+
+	&__number {
+		font-size: 5rem;
+		font-weight: bold;
+	}
+
+	&__title {
+		font-size: 2rem;
+		font-weight: bold;
+	}
+
+	///////////////////////////////////////////////////////////////
+	///////////////////////////////////////////////////////////////
+
+	///////////////////////////////////////////////////////////////
+	///////////////////////////////////////////////////////////////
+
+	&__description {
+		font-size: 1.2rem;
+		font-weight: bold;
+		padding-bottom: 2rem;
+		color: var(--text2);
+	}
+
+	&__layout_intro {
+		height: 700px;
+		// background-color: burlywood;
+		.port_box__intro_text {
+			// background-color: brown;
+			font-size: 9rem;
+			font-weight: bold;
+			transform: translate(-20%, 810%) rotate(-80deg);
+			// @media (max-width: $bpL) {
+			// 	transform: translate(-20%, 190%) rotate(-80deg);
+			// }
+		}
+	}
+
+	&__layout_001 {
+		min-height: 300px;
+		.port_box__number {
+			font-size: 4rem;
+			font-weight: bold;
+			padding-bottom: 2rem;
+		}
+		// @media (max-width: $bpL) {
+		// 	min-height: 200px;
+		// }
+	}
+
+	&__layout_002 {
+		min-height: 400px;
+		.port_box__number {
+			font-size: 5rem;
+			font-weight: bold;
+			padding-bottom: 2rem;
+		}
+		// @media (max-width: $bpL) {
+		// 	min-height: 1000px;
+		// }
+	}
+
+	&__layout_003 {
+		min-height: 700px;
+		.port_box__number {
+			font-size: 7rem;
+			font-weight: bold;
+			padding-bottom: 1rem;
+		}
+		.port_box__image {
+			img {
+				width: 150%;
+			}
+		}
+		// @media (max-width: $bpL) {
+		// 	min-height: 700px;
+		// }
+	}
+
+	&__layout_004 {
+		min-height: 400px;
+		.port_box__number {
+			font-size: 4rem;
+			font-weight: bold;
+		}
+		// @media (max-width: $bpL) {
+		// 	min-height: 450px;
+		// }
+	}
+
+	&__layout_005 {
+		min-height: 240px;
+		.port_box__number {
+			font-size: 2rem;
+			font-weight: bold;
+		}
+	}
+
+	&__layout_006 {
+		min-height: 140px;
+		.port_box__number {
+			font-size: 2rem;
+			font-weight: bold;
+		}
+	}
+
+	&__layout_007 {
+		min-height: 380px;
+		.port_box__number {
+			font-size: 6rem;
+			font-weight: bold;
+		}
+	}
 }
