ad styling blockquote

--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -27,7 +27,7 @@
 // @import 'form';
 // @import 'mobile_menu';
 // @import 'ui_page';
-// @import 'blockquote';
+@use 'blockquote';
 @use 'typography';
 // @import 'lists';
 // @import 'code';
