update mobile menu

--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -25,7 +25,7 @@
 // @import 'selection';
 // @import 'iframe_youtube';
 // @import 'form';
-// @import 'mobile_menu';
+@use 'mobile_menu';
 // @import 'ui_page';
 @use 'blockquote';
 @use 'typography';
