--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @use '/src/scss/00-vars/colors-shemes';
 @use '/src/scss/layout/layout';
 @use '/src/scss/2-base/2-base' as base;
+@use '/src/scss/3-components/3-components' as carousel;
