--- a/src/scss/grid/_mixins.scss
+++ b/src/scss/grid/_mixins.scss
@@ -52,24 +52,24 @@
 		flex: 1 1 0px;
 	}
 
-	@for $i from 1 through vars.$basicGrid__columns {
+	@for $i from 1 through vars.$reworkGrid__columns {
 		&.#{ $name }-#{ $i } {
 			flex: 0 1 auto;
-			width: percentage(math.div(1, vars.$basicGrid--columns)) * $i;
+			width: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-offset-#{ $i } {
-			margin-left: percentage(math.div(1, vars.$basicGrid--columns)) * $i;
+			margin-left: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-pull-#{ $i } {
 			left: auto;
-			right: percentage(math.div(1, vars.$basicGrid--columns)) * $i;
+			right: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-push-#{ $i } {
 			right: auto;
-			left: percentage(math.div(1, vars.$basicGrid--columns)) * $i;
+			left: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 	}
 
