--- a/src/scss/grid/_row.scss
+++ b/src/scss/grid/_row.scss
@@ -5,7 +5,7 @@
 .container {
 	margin: 0 auto;
 	width: 100%;
-	max-width: vars.$basicGrid__width;
+	max-width: vars.$reworkGrid__width;
 }
 
 .container_full {
@@ -13,14 +13,17 @@
 	width: 100vw;
 }
 
+
+
 .row {
 	display: flex;
+	flex-direction: row;
 	flex-wrap: wrap;
 	box-sizing: border-box;
 	margin: 0 auto;
-	padding: 0 vars.$basicGrid__outer;
+	padding: 0 vars.$reworkGrid__outer;
 	width: 100%;
-	max-width: vars.$basicGrid__width;
+	max-width: vars.$reworkGrid__width;
 
 	&--spacing {
 		margin-bottom: -(vars.$gutter);
@@ -30,15 +33,15 @@
 		margin-bottom: vars.$gutter;
 	}
 
-	@each $sizeName, $size in vars.$basicGrid__sizes {
+	@each $sizeName, $size in vars.$reworkGrid__sizes {
 		@media (min-width: $size) {
 			@include mixins.rowClasses($sizeName);
 		}
 	}
 
 	.row {
-		margin: 0 math.div(vars.$basicGrid--gutter, -2);
-		margin: 0 calc(var(--basicGrid-gutter, #{vars.$basicGrid__gutter}) / -2);
+		margin: 0 math.div(vars.$reworkGrid--gutter, -2);
+		margin: 0 calc(var(--reworkGrid-gutter, #{vars.$reworkGrid__gutter}) / -2);
 		padding: 0;
 		width: auto;
 		max-width: none;
@@ -47,14 +50,25 @@
 	.column {
 		position: relative;
 		box-sizing: border-box;
-		padding: 0 math.div(vars.$basicGrid--gutter, 2);
-		padding: 0 calc(var(--basicGrid-gutter, #{vars.$basicGrid__gutter}) / 2);
+		text-align: start;
+		padding: 0 math.div(vars.$reworkGrid--gutter, 2);
+		padding: 0 calc(var(--reworkGrid-gutter, #{vars.$reworkGrid__gutter}) / 2);
 		width: 100%;
 
-		@each $sizeName, $size in vars.$basicGrid__sizes {
+		@each $sizeName, $size in vars.$reworkGrid__sizes {
 			@media (min-width: $size) {
 				@include mixins.columnClasses($sizeName);
 			}
 		}
+	}
+}
+
+// RTL Adjustemnts on grid system Default LTR
+.dir-rtl {
+	.row {
+		flex-direction: row-reverse;
+	}
+	.column {
+		text-align: end;
 	}
 }
