--- a/src/scss/grid/_vars.scss
+++ b/src/scss/grid/_vars.scss
@@ -1,10 +1,11 @@
-$basicGrid__columns: 12 !default;
-$basicGrid__width: 1280px !default;
-$basicGrid__gutter: 1.8rem !default;
-$basicGrid__outer: 0 !default;
+$reworkGrid__centering-divisor: -2;
+$reworkGrid__columns: 12 !default;
+$reworkGrid__width: 1280px !default;
+$reworkGrid__gutter: 1.8rem !default;
+$reworkGrid__outer: 0 !default;
 $gutter: 1.8rem !default;
 
-$basicGrid__sizes: (
+$reworkGrid__sizes: (
 	'small': 0,
 	'medium': 640px,
 	'large': 1024px,
