--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -19,3 +19,13 @@
 //         }
 //     }
 // }
+.pd-hero .area {
+
+    padding-inline-start: 5px;
+    padding-inline-end: 5px;
+    // background-color: var(--surface1);
+    background-image: url(/assets/imgs/hero/pd/bg.png);
+    background-image: url(../../assets/images/hero/bg.png);
+    // background-image: url('data:image/svg+xml;utf8,<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"><defs><pattern id="grid" width="20" height="20" patternUnits="patternUnits"><rect width="5" height="5" fill="black" /><path d="M 5 0 L 0 0 0 5" fill="none" stroke="gray" stroke-width="0.15"/></pattern></defs><rect width="100%" height="100%" fill="url(#grid)" /></svg>');
+    // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='grid' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Crect width='11' height='11' fill='var(--surface2)' /%3E%3Cpath d='M 5 0 L 0 0 0 5' fill='blue' stroke='green' stroke-width='0.15' /%3E%3C/pattern%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='url(%23grid)' /%3E%3C/svg%3E");
+}
