--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -30,8 +30,19 @@
     // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='grid' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Crect width='11' height='11' fill='var(--surface2)' /%3E%3Cpath d='M 5 0 L 0 0 0 5' fill='blue' stroke='green' stroke-width='0.15' /%3E%3C/pattern%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='url(%23grid)' /%3E%3C/svg%3E");
 }
 
+.img_anim_reveal {
+    visibility: hidden;
+    overflow: hidden;
+
+    img {
+        object-fit: cover;
+        transform-origin: left;
+    }
+}
+
 .pd-hero {
     height: 100vh;
+
     .container {
         // display: flex;
         max-width: 700px;
